fixed portfolio flex-wrap and spacing in the contact page.

--- a/assets/css/contactstyle.css
+++ b/assets/css/contactstyle.css
@@ -7,6 +7,7 @@
 body {
     margin: 0;
     background-image: url(../images/papyrus.png);
+    height: 100%;
 }
 
 a {
@@ -59,9 +60,61 @@ footer {
     padding: 10px;  
 }
 
-#hrAboutMe {
+#contactSection {
+    width: 960px;
+    padding: 30px; 
+    text-align: center;
+    background-color: white;
+    clear: both;
+    border: lightgrey;
+    border-style:solid;
+    border-width: 1px;
+    margin-left: 211px;
+    margin-bottom: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #777777; 
+}
+
+#contactHeading {
+    font-family:'Georgia', Times, "Times New Roman", serif;
+    color: #4aaaa5;
+    font-size: 20pt;
+}
+
+#hrContact {
     color: #666666;
     border-width: 1px;
+}
+
+.formTitles {
+    padding: 0px;;
+}
+
+.inputBox {
+    margin: 0px 0px;
+    padding: 10px 0px;
+    height: 20px;
+    width: 100%;
+    font-size: 12px;
+    color: #8d8d8d;
+    font-family: Arial, Helvetica, sans-serif;
+    text-indent: 3px;
+}
+
+.submitBox {
+    margin: 0px 0px;
+    padding: 10px 0px;
+    height: 20px;
+    font-size: 12px;
+    color: #8d8d8d;
+    font-family: Arial, Helvetica, sans-serif;
+    text-indent: 3px;
+}
+
+.textareaForm {
+    height: 100px;
+    outline: none !important;
+    border:1px solid #cacaca;
 }
 
 #hrBottomTeal {
@@ -71,7 +124,9 @@ footer {
     clear: both;
 }
 
-/*#bottomTealBlock {
-    background-color: pink;
-    height: 100 px;
-}*/
+#copyright {
+    color: white;
+    opacity: 60%;
+    text-align: center;
+    margin-top: 50px; 
+}
